[package]
name = "mig-kz"
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29.0", features = ["chrono", "bundled"] }
scraper = "0.18.1"
tokio = { version = "1.33.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
debug = false
